# steamgo

./: .gitignore  CMakeLists.txt  boardviewer.cpp  boardviewer.h  gamestate.cpp  gamestate.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
.github/workflows/: build.yml
protos/: go_service.proto
sgf/: capture_one.sgf  ko.sgf  self_capture.sgf  test.sgf
src/: adjacentgen.h  appstate.h  boardviewer.cpp  boardviewer.h  gamestate.cpp  gamestate.h  main.cpp  mainwindow.cpp  mainwindow.h  sgf.cpp  sgf.h
src/client/: appstate.cpp  appstate.h  boardviewer.cpp  boardviewer.h  go_service_client.cpp  go_service_client.h  main.cpp  mainwindow.cpp  mainwindow.h
src/common/: gamestate.cpp  gamestate.h  sgf.cpp  sgf.h
src/server/: go_service.cpp  go_service.h  main.cpp
tests/: sgf_tests.cpp
